# accounts/src/main/java/com/omarabdelrehim8/accounts/exception/ServerErrorException.java
@@ -1,0 +1,12 @@
+package com.omarabdelrehim8.accounts.exception;
+
+import org.springframework.http.HttpStatus;
+import org.springframework.web.bind.annotation.ResponseStatus;
+
+@ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
+public class ServerErrorException extends RuntimeException {
+
+    public ServerErrorException(String message) {
+        super(message);
+    }
+}
